2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-body.c (soup_buffer_get_type): Register
	SoupBuffer as a boxed type.

	* libsoup/soup-message.c (soup_message_class_init): Use
	SOUP_TYPE_BUFFER in got_chunk signal definition

	* libsoup/soup-server.c (soup_client_context_get_type): Register
	SoupClientContext as a pointer type
	(soup_server_class_init): use SOUP_TYPE_CLIENT_CONTEXT in signal
	definitions.

	* libsoup/soup-marshal.list: clean this up

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-server.c (SoupClientContext): Make this opaque.
	(soup_client_context_get_socket)
	(soup_client_context_get_auth_domain)
	(soup_client_context_get_auth_user): New accessors
	(soup_server_class_init): Make the signals take a
	SoupClientContext rather than a SoupSocket.
	(start_request, check_auth, call_handler, request_finished): Clean
	these up by using a SoupClientContext to communicate between them.
	(soup_server_add_handler): tweak the argument order to match the
	gtk standard (callback, user_data, destroynotify).

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-address.c: remove the "dns_result" signal, which
	was just an implementation detail of soup_address_resolve_async().

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/*.c: misc documentation updates/gtk-doc fixes

	* libsoup/soup-server.c: finally start documenting this properly.

	* libsoup/soup-status.h (SoupStatusClass): kill this, since
	soup_message_add_status_class_handler() is gone now.

	* libsoup/soup-status.c (soup_status_get_phrase): Update docs to
	explain that you probably don't want to use this.

	* libsoup/soup-misc.h (SOUP_SSL_ERROR, SoupSSLError): Move these
	here, since soup-ssl.h isn't installed.

	* docs/references: start updating this...

2008-01-04  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-body.c (soup_buffer_new)
	(soup_message_body_append): Reorder the arguments to match
	soup_message_set_request/response, so it's not confusing.
